2007-06-01  Christian Persch  <chpe@gnome.org>

	* src/totem-menu.c: (connect_proxy_cb),
	(totem_recent_manager_changed_callback), (totem_setup_recent):
	Don't use UTF-8 unsafe string manipulations to ellipsise but simply
	ellipsise the label itself. Bug #442371.

2007-06-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_show_properties):
	Ignore Ctrl+P when in fullscreen (Closes: #442673)

2007-05-24  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/totem-uri.c: (totem_uri_get_subtitle_uri):
	When checking whether a subtitle file exists alongside
	the media file, properly handle media files that have extensions
	which aren't 3 characters long, or no extension at all.
	(Closes: #440911)

============ Version 2.19.3

2007-05-21  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.19.3

	* browser-plugin/Makefile.am:
	* src/Makefile.am:
	* src/bacon-video-widget-properties.c:
	* src/bacon-video-widget-properties.h:
	* src/plugins/properties/Makefile.am: Move the
	bacon-video-widget-properties.[ch] to the properties
	plugin directory to avoid cyclic builds, and fix make distcheck

	* src/plugins/sidebar-test/Makefile.am:
	* src/plugins/properties/Makefile.am: Fix distclean

2007-05-18  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am:
	* src/bacon-video-widget-properties.c:
	(bacon_video_widget_properties_update):
	* src/bacon-video-widget-properties.h:
	* src/plugins/properties/Makefile.am:
	* src/plugins/properties/movie-properties.totem-plugin.in:
	* src/plugins/properties/totem-movie-properties.c:
	(totem_movie_properties_plugin_class_init),
	(totem_movie_properties_plugin_init),
	(totem_movie_properties_plugin_finalize),
	(stream_length_notify_cb),
	(totem_movie_properties_plugin_file_opened),
	(totem_movie_properties_plugin_file_closed),
	(totem_movie_properties_plugin_metadata_updated), (impl_activate),
	(impl_deactivate):
	* src/plugins/skipto/totem-skipto.c: (totem_skipto_new):