@@ -131,6 +131,7 @@ void	totem_action_toggle_aspect_ratio	(Totem *totem);
 void	totem_action_set_aspect_ratio		(Totem *totem, int ratio);
 int	totem_action_get_aspect_ratio		(Totem *totem);
 void	totem_action_toggle_controls		(Totem *totem);
+void	totem_action_next_angle			(Totem *totem);
 
 void	totem_action_set_scale_ratio		(Totem *totem, gfloat ratio);
 void    totem_action_error                      (const char *title,
