@@ -1,3 +1,11 @@
+2007-06-01  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-menu.c: (next_angle_action_callback):
+	* src/totem.c: (totem_action_next_angle),
+	(totem_action_handle_key_press):
+	* src/totem.h: Make the "Switch angles" menu item work again
+	(somebody forgot to implement the callback...)
+
 2007-06-01  Christian Persch  <chpe@gnome.org>
 
 	* src/totem-menu.c: (connect_proxy_cb),
